<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">兰木书评</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">兰木书评</string>
    <string name="nav_header_subtitle">yaohaibiao2333@qq.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">搜书评</string>
    <string name="search_action_title">search_action_title</string>
    <string name="search_result_page_title">搜索“%s”的结果：</string>
    <string name="create_book_post_guide">书籍“%s”的相关的帖子还没有被创建过，点击创建。</string>
    <string name="book_info">书籍信息</string>
    <string name="hint_book_name">书籍名：</string>
    <string name="hint_author_name">作者：</string>
    <string name="hint_version">版本：</string>
    <string name="hint_publish_date">出版时间：</string>
    <string name="hint_publish_house">出版社：</string>
    <string name="hint_publisher">出版方：</string>
    <string name="hint_content_description">内容简介：</string>
    <string name="hint_creator_message">创帖人留言：</string>
    <string name="click_to_post_cover">点击上传书籍封面</string>
    <string name="next">下一页</string>
    <string name="creator_info">创建该帖人信息</string>
    <string name="hint_creator_email">建帖人地址邮箱：</string>
    <string name="hint_phone">手机号码：</string>
    <string name="creator_name">建帖人留名：</string>
    <string name="create_now">立即创建</string>
    <string name="create_post_first_step">第一步，提供书籍信息</string>
    <string name="create_post_second_step">第二步，提供帖子内容</string>
    <string name="comments_title">评论列表</string>
    <string name="published_comments">发表过的书评</string>
    <string name="send">发送</string>
    <string name="file">文件</string>
    <string name="title_activity_login">登陆</string>

    <!-- Strings related to save2SP -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">This phone is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="copyright">Copyright 2019 haibiao2333</string>
    <string name="login_title">登陆/注册</string>
    <string name="logout">退出登陆</string>
    <string name="hot_book_posts">热帖</string>
    <string name="suggest">推荐</string>
    <string name="history">浏览历史</string>
    <string name="no_comments">暂无评论，写评论</string>
    <string name="expand_comment_reply">查看全部 %d 条评论 ▸</string>
    <string name="colon">\u0020\u0020:\u0020\u0020</string>
    <string name="reply">回复\u0020\u0020</string>
    <string name="show_more">show more</string>
    <string name="show_less">show less</string>


    <string name="appbar_scrolling_view_behavior_copy" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="say_about_yours">说说你的看法&#8230;</string>
    <string name="publish">发布</string>
    <string name="publish_succeed">发布成功</string>
    <string name="publish_failed">发布失败</string>
    <string name="reply_to">回复 %s :\u0020\u0020</string>
    <string name="reply_comment">回复该评论：</string>
    <string name="count">（%d条）</string>
    <string name="warehouse">warehouse</string>
    <string name="hospital">hospital</string>
    <string name="lorem_ipsum">lorem_ipsum</string>
    <string name="label_cover">封面：</string>
    <string name="prev">上一页</string>
    <string name="hint_edit_post_content">关于本书，说点什么吧...</string>
    <string name="hint_introduction">书籍简介：</string>
    <string name="hint_languish">语言：</string>
    <string name="login">登录</string>
    <string name="hint_password">密码：</string>
    <string name="no_account_so_register">没有账号？去注册</string>
    <string name="hint_username">用户名:</string>
    <string name="has_account_so_login">已有账号？去登录</string>
    <string name="register">注册</string>
    <string name="login_success">登录成功！</string>
    <string name="network_error">网络错误</string>
    <string name="result_error">返回数据错误</string>
    <string name="login_fail">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="error_invalid_username">用户名不超过24个字符</string>
    <string name="select_no_image">无选中照片</string>
    <string name="tip_should_select_cover">没有封面，要继续下一步请选择一个封面</string>
    <string name="tip_text_too_short">至少 32 个字符</string>
    <string name="tip_upload_image_error">图片上传遇到问题啦</string>
    <string name="tip_search_fail">服务器坏掉了。。。</string>
    <string name="default_user_description">此人很懒，还没有填写任何介绍......</string>
    <string name="label_submit">提交</string>
    <string name="label_avatar_tips">点击设置头像</string>
    <string name="hint_edit_introduction">一段话介绍一下自己......</string>
    <string name="update_info">修改信息</string>
    <string name="tip_info_updated">信息已更新</string>
    <string name="tip_info_update_failed">信息更新失败：</string>
    <string name="tip_info_load_failed">数据加载失败：</string>
    <string name="his_dynamic">个人动态</string>
    <string name="tip_create_comment_success">发表成功</string>
    <string name="tip_create_reply_success">回复成功</string>
    <string name="menu_my_message">私信</string>
    <string name="menu_my_notification">点赞/评论</string>
    <string name="menu_my_contract">好友</string>
    <string name="menu_setting">设置</string>
    <string name="menu_other">其他</string>
    <string name="menu_share">分享</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_say_something">说点什么吧......</string>
    <string name="tip_send_fail">消息发送失败：</string>
    <string name="title_conversation">聊天列表</string>
    <string name="title_received_interact">收到的评论和点赞</string>
    <string name="title_friends">我的好友</string>
    <string name="new_friend">新朋友</string>
    <string name="agree">同意</string>
    <string name="ignore">忽略</string>
    <string name="apply_add_friend">请求加为好友</string>
    <string name="title_applies">申请列表</string>
    <string name="already_agreed">已同意</string>
    <string name="already_rejected">已拒绝</string>
    <string name="track">足迹 &gt;</string>
    <string name="title_dynamic">全部动态</string>
    <string name="order_default">默认排序</string>
    <string name="order_reverse">倒序查看</string>
    <string name="order_comment_count">按热度排序</string>
    <string name="arrived_bottom">已经到底啦</string>
    <string name="unread">（%d条未读）</string>
    <string name="hint_empty_dynamics">还没有创建过任何书帖哟~</string>

</resources>
