<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_my_contract"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_contract" />
        <item
            android:id="@+id/nav_my_message"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_message" />
        <item
            android:id="@+id/nav_my_notification"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_notification" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
