<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".business.create_post.CreatePostActivity"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/tv_book_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_info"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_cover_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_book_info"
        android:layout_marginTop="12dp"
        android:text="@string/label_cover"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <FrameLayout
        android:id="@+id/fl_add_cover"
        android:layout_width="160dp"
        android:layout_height="228dp"
        android:layout_below="@id/tv_book_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_color_primary_dash_stroke">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_add_36dp"
            android:gravity="center"
            android:text="@string/click_to_post_cover"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/iv_selected_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_margin="6dp"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fl_add_cover"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_book_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_author_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_version">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_publish_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_publish_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_publisher">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_languish">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_languish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_introduction">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textMultiLine"
                android:id="@+id/edt_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</RelativeLayout>