<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".business.create_post.CreatePostActivity"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/tv_book_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/creator_info"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_book_info"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/creator_name"
            android:textColorHint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_creator_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creator_phone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_creator_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creator_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_creator_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/hint_creator_message"
            android:background="@drawable/shape_gray_stroke"
            android:padding="12dp"
            tools:ignore="RtlSymmetry">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_creator_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:minLines="10" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</RelativeLayout>