<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/bg_src_tianjin">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28dp"
        android:paddingBottom="40dp"
        app:titleTextColor="@android:color/white"
        app:title="@string/login"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_round_rect_white"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_phone"
                android:tint="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:background="@null"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="44dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:background="@color/color_bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_key"
                android:tint="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/txt_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/no_account_so_register"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/ic_direction_right"
            android:tint="@color/white" />
    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="48dp"
        android:background="@drawable/shape_round_rect_white"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="@color/colorPrimary" />


    <!--<EditText-->
        <!--android:id="@+id/edit_url"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="4dp"-->
        <!--android:layout_marginEnd="2dp"-->
        <!--android:background="@android:color/white"-->
        <!--android:hint="@string/hint_password"-->
        <!--android:inputType="textUri"-->
        <!--android:paddingTop="8dp"-->
        <!--android:paddingBottom="8dp"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="14sp" />-->
    <!--<Button-->
        <!--android:id="@+id/btn_test"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
</LinearLayout>